add react button

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script defer src="./index.js"></script>
+  <script defer src="./dist/app.js"></script>
 </html>
