--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html dir="ltr" lang="uk">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Lambda</title>
+    <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
     <div id="root"></div>
