add shortcut icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Lambda</title>
+    <link rel="shortcut icon" href="./Lambda.png">
     <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
