--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Main Page</title>
+    <link rel="shortcut icon" href="./eye.jpg">
   </head>
   <body>
     <div id="root"></div>
